--- a/project1_udacity/index.html
+++ b/project1_udacity/index.html
@@ -13,10 +13,12 @@
 
 
 <body>
-	<div class="container-fluid">
+
+  
+<div class="container-fluid">
 
 		<!-- Header-->
-		<header class="wrapper">
+	  	<header class="wrapper">
 				<img class="logo" src="https://cdn.worldvectorlogo.com/logos/udacity.svg"  alt="">
 		
 				<h1 class="title_header_up">
@@ -24,10 +26,10 @@
 				</h1>
 				<h2 class="title_header">Computer Science</h2>
 		
-		</header>
+	  	</header>
 
 		<!--Body content-->
-		<div class="row">
+	   <div class="row">
 			
 					<img class="col-12 img" src="img/header.PNG"  width="1050" alt="Header_img">
 			</div>
@@ -38,57 +40,39 @@
 			<section class=" col-12">
 				<!--  TITLE -->
 				<h2 class="sub_title">School Grade</h2>
-				 <div class="container">
+				 
           <!-- content card -->
-                     <ul class="list row">
-                        <div class="col-sm">
-                           <li>
-                           	 <div class="card" >
+                     <div class="list row">
+                         <div class="col-sm card "> 
                                 <img  src="img/primary.PNG" class="card-img-top" width="300" height="350"  alt="primary-imge">
-                               <div class="card-body">
+                                <div class="card-body">
                                 <h5 class="card-title">Primary 85</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                 <a href="https://twitter.com/e__85" class="btn btn-primary">view details</a>
                                </div>
-                              </div>
-                          </li>
                          </div>
 
 
-                         <div class="col-sm">
-                            <li>
-                           	 <div class="card" >
+                         <div class="col-sm card" >
                                 <img   src="img/secondary.PNG" class="card-img-top" width="300" height="350" alt="...">
-                               <div class="card-body">
+                                <div class="card-body">
                                 <h5 class="card-title">Secondary 42</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                 <a href="#" class="btn btn-primary">view details</a>
                                </div>
-                              </div>
-                          </li>
                          </div>
                   
-                         <div class="col-sm">
-                           <li>
-                           	 <div class="card" >
+                         <div class="col-sm card">
                                 <img   src="img/university.PNG" class="card-img-top" width="300" height="350"  alt="university-image">
                                <div class="card-body">
                                 <h5 class="card-title">Umm al-Qura</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                 <a href="https://uqu.edu.sa" class="btn btn-primary">view details</a>
                                </div>
-                              </div>
-                          </li>
                          </div>
-                          </div>
-                     </ul>
                  </div>
-	
-
-			</section>
-
-		</main>
-	</div>
-</body>
-
+			      </section>
+          </main>
+		   </div>
+   </body>
 </html>
